--- a/Areas/User/Views/UserHome/UserProfile.cshtml
+++ b/Areas/User/Views/UserHome/UserProfile.cshtml
@@ -195,7 +195,7 @@
                     </div>
                 </div>
                 <div class="row total-spent">
-                    <div class="row justify-content-center fw-bolder total-money">
+                    <div class="row justify-content-center fw-medium total-money">
                         <div class="col-auto">
                             <span class="total-money-text">Tổng chi tiêu 2024</span>
                         </div>
@@ -403,7 +403,7 @@
                                                         <div class="subform-group">
                                                             <label for="email">Email</label>
                                                             <div class="subform non-click">
-                                                                <input class="un-click" type="email" placeholder="@currentUser.email">
+                                                                <input class="un-click" type="text" placeholder="@currentUser.email">
                                                             </div>
                                                         </div>
                                                     </div>
