--- a/Areas/User/Views/Shared/_UserLayout.cshtml
+++ b/Areas/User/Views/Shared/_UserLayout.cshtml
@@ -99,7 +99,7 @@
                                             </a>
                                         </li>
                                         <li class="list-group-item">
-                                            <a href="">
+                                            <a href="/User/UserHome/HistoryTicket">
                                                 <i class="fa-solid fa-list-ol account-icon"></i>
                                                 Lịch Sử
                                             </a>
