--- a/Areas/User/Views/UserHome/HistoryTicket.cshtml
+++ b/Areas/User/Views/UserHome/HistoryTicket.cshtml
@@ -7,6 +7,7 @@
         Response.Redirect("~/Home/SignIn");
     }
     DateTime currentDate = DateTime.Now;
+    DateTime previousMonthYear = DateTime.MinValue;
 }
 
 <!DOCTYPE html>
@@ -14,11 +15,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="~/assets/images/logo/cinema-logo.png" type="image/png">
+    <link rel="icon" href="~/assets/images/logo/cinema-logo.png" type="image/png" />
     <title>Ohayou Cinema</title>
-    <link rel="stylesheet" href="~/Areas/User/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="~/assets/font/themify-icons/themify-icons.css">
-    <link rel="stylesheet" href="~/Areas/User/assets/css/profilestyle.css">
+    <link rel="stylesheet" href="~/Areas/User/assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/assets/font/themify-icons/themify-icons.css" />
+    <link rel="stylesheet" href="~/Areas/User/assets/css/profilestyle.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -198,10 +199,10 @@
                 <div class="row total-spent">
                     <div class="row justify-content-center fw-medium total-money">
                         <div class="col-auto">
-                            <span class="total-money-text">Tổng chi tiêu @currentDate.Year</span>
+                            <span>Tổng chi tiêu @currentDate.Year</span>
                         </div>
-                        <div class="col-auto" style="padding-right: 2rem">
-                            <span class="total-money-text">
+                        <div class="col-auto total-money-text" style="padding-right: 2rem">
+                            <span>
                                 @ViewBag.totalSpent
                             </span>
                             <i class="fa-solid fa-dong-sign"></i>
@@ -272,53 +273,76 @@
                             <div class="row text-center notice-text">
                                 <span>Lưu ý: chỉ hiển thị 10 giao dịch gần nhất</span>
                             </div>
-                            @foreach (var ticketitem in ViewBag.ticketList)
+                            @foreach (var invoiceitem in ViewBag.invoiceList)
                             {
-                                <div class="row text-center ticket-month">
-                                    <span>Tháng @ticketitem.invoice.day_create.ToString("MM/yyyy")</span>
-                                </div>
+                                DateTime currentMonthYear = new DateTime(invoiceitem.day_create.Year, invoiceitem.day_create.Month, 1);
+                                bool sameMonthYear = currentMonthYear == previousMonthYear;
+
+                                if (!sameMonthYear)
+                                {
+                                    <div class="row text-center ticket-month">
+                                        <span>Tháng @invoiceitem.day_create.ToString("MM/yyyy")</span>
+                                    </div>
+                                }
+
                                 <div class="row ticket-detail">
                                     <div class="bg-white ticket-container align-items-center">
                                         <div class="col-md-1 history-img">
-                                            <img src="@ticketitem.room_schedule_detail.schedule_detail.movie_display_date.movy.url_image" alt="">
+                                            <img src="@invoiceitem.room_schedule_detail.schedule_detail.movie_display_date.movy.url_image" alt="">
                                         </div>
-                                        <div class="col-md-4 ticket-movie-name">
-                                            <span>@ticketitem.room_schedule_detail.schedule_detail.movie_display_date.movy.title</span>
+                                        <div class="col-md-5 ticket-movie-name">
+                                            <span>@invoiceitem.room_schedule_detail.schedule_detail.movie_display_date.movy.title</span>
                                         </div>
-                                        <div class="col-md-4 ticket-time-detail">
-                                            <span>@ticketitem.room_schedule_detail.schedule_detail.movie_display_date.display_date.display_date1.DayOfWeek</span>
+                                        <div class="col-md-3 ticket-time-detail">
+                                            <span>@invoiceitem.room_schedule_detail.schedule_detail.schedule.schedule_time.ToString(@"hh\:mm")</span>
                                             &nbsp;
-                                            <span>@ticketitem.room_schedule_detail.schedule_detail.schedule.schedule_time.ToString(@"hh\:mm")</span>
-                                            <span>, @ticketitem.room_schedule_detail.schedule_detail.movie_display_date.display_date.display_date1.ToString("dd/MM/yyyy")</span>
+                                            <span>@invoiceitem.room_schedule_detail.schedule_detail.movie_display_date.display_date.display_date1.DayOfWeek</span>
+                                            <span>, @invoiceitem.room_schedule_detail.schedule_detail.movie_display_date.display_date.display_date1.ToString("dd/MM/yyyy")</span>
                                         </div>
                                         <div class="col-md-2 ticket-more-detail">
-                                            <a href="#detail1" class="accordion-toggle" data-bs-toggle="modal" data-bs-target="#detail1" aria-expanded="false">Chi tiết</a>
+                                            <a href="@($"#invoice-{invoiceitem.id}")" class="accordion-toggle" data-bs-toggle="modal" data-bs-target="#" aria-expanded="false">Chi tiết</a>
                                         </div>
                                     </div>
-                                    <div class="modal" id="detail1">
+                                    <div class="modal" id="@($"invoice-{invoiceitem.id}")">
                                         <div class="modal-dialog">
                                             <div class="modal-content">
                                                 <div class="col ticket-wrapper">
                                                     <div class="row1">
-                                                        <img src="~/assets/images/movie/exhuma.jpg" alt="">
-                                                        <p>Exhuma: Quật mộ trùng ma</p>
+                                                        <img src="@invoiceitem.room_schedule_detail.schedule_detail.movie_display_date.movy.url_image" alt="">
+                                                        <p>@invoiceitem.room_schedule_detail.schedule_detail.movie_display_date.movy.title</p>
                                                     </div>
                                                     <div class="row2">
                                                         <p>Ohayou cenima</p>
-                                                        <p>Suất 20:00 Thứ ba, 09/04/2024</p>
+                                                        <p>
+                                                            Suất @invoiceitem.room_schedule_detail.schedule_detail.schedule.schedule_time.ToString(@"hh\:mm")
+                                                            @invoiceitem.room_schedule_detail.schedule_detail.movie_display_date.display_date.display_date1.DayOfWeek,
+                                                            @invoiceitem.room_schedule_detail.schedule_detail.movie_display_date.display_date.display_date1.ToString("dd/MM/yyyy")
+                                                        </p>
                                                     </div>
                                                     <div class="row3">
                                                         <p class="p">Ghế</p>
-                                                        <p>D5, D6</p>
+                                                        @foreach (var ticketitem in invoiceitem.tickets)
+                                                        {
+                                                            if (ticketitem.seat.room_id == invoiceitem.room_schedule_detail.room_id)
+                                                            {
+                                                                <div class="d-inline-block">
+                                                                    <span>@ticketitem.seat.seat_column@ticketitem.seat.seat_row</span>
+                                                                    <span class="ticket-space"></span>
+                                                                </div>
+                                                            }
+                                                        }
                                                     </div>
                                                     <div class="row4">
                                                         <div class="col">
-                                                            <p class="p">Mã vé</p>
-                                                            <p>WJHC3B5</p>
+                                                            <p class="p">Mã hóa đơn</p>
+                                                            <p>@invoiceitem.id</p>
                                                         </div>
                                                         <div class="col">
                                                             <p class="p">Giá</p>
-                                                            <p>100.000đ</p>
+                                                            <p>
+                                                                @invoiceitem.total_money
+                                                                <i class="fa-solid fa-dong-sign"></i>
+                                                            </p>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -326,107 +350,8 @@
                                         </div>
                                     </div>
                                 </div>
+                                previousMonthYear = currentMonthYear;
                             }
-                            @*<div class="row text-center ticket-month">
-                                <span>Tháng 3/2024</span>
-                            </div>
-                            <div class="row ticket-detail">
-                                <div class="bg-white ticket-container align-items-center">
-                                    <div class="col-md-1 history-img">
-                                        <img src="~/assets/images/movie/exhuma.jpg" alt="">
-                                    </div>
-                                    <div class="col-md-4 ticket-movie-name">
-                                        <span>Exhuma: Quật mộ trùng ma</span>
-                                    </div>
-                                    <div class="col-md-4 ticket-time-detail">
-                                        <span>20:00h Chủ nhật</span>
-                                        <span>, 09/04/2024</span>
-                                    </div>
-                                    <div class="col-md-2 ticket-more-detail">
-                                        <a href="#detail1" class="accordion-toggle" data-bs-toggle="modal" data-bs-target="#detail1" aria-expanded="false">Chi tiết</a>
-                                    </div>
-                                </div>
-                                <div class="modal" id="detail1">
-                                    <div class="modal-dialog">
-                                        <div class="modal-content">
-                                            <div class="col ticket-wrapper">
-                                                <div class="row1">
-                                                    <img src="~/assets/images/movie/exhuma.jpg" alt="">
-                                                    <p>Exhuma: Quật mộ trùng ma</p>
-                                                </div>
-                                                <div class="row2">
-                                                    <p>Ohayou cenima</p>
-                                                    <p>Suất 20:00 Thứ ba, 09/04/2024</p>
-                                                </div>
-                                                <div class="row3">
-                                                    <p class="p">Ghế</p>
-                                                    <p>D5, D6</p>
-                                                </div>
-                                                <div class="row4">
-                                                    <div class="col">
-                                                        <p class="p">Mã vé</p>
-                                                        <p>WJHC3B5</p>
-                                                    </div>
-                                                    <div class="col">
-                                                        <p class="p">Giá</p>
-                                                        <p>100.000đ</p>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row text-center ticket-month">
-                                <span>Tháng 2/2024</span>
-                            </div>
-                            <div class="row ticket-detail">
-                                <div class="bg-white ticket-container align-items-center">
-                                    <div class="col-md-1 history-img">
-                                        <img src="~/assets/images/movie/exhuma.jpg" alt="">
-                                    </div>
-                                    <div class="col-md-4 ticket-movie-name">
-                                        Exhuma: Quật mộ trùng ma
-                                    </div>
-                                    <div class="col-md-4 ticket-time-detail">
-                                        <span>20:00h Thứ ba, </span>
-                                        <span>09/04/2024</span>
-                                    </div>
-                                    <div class="col-md-2 ticket-more-detail">
-                                        <a href="#detail2" class="accordion-toggle" data-bs-toggle="modal" data-bs-target="#detail2" aria-expanded="false">Chi tiết</a>
-                                    </div>
-                                </div>
-                                <div class="modal" id="detail2">
-                                    <div class="modal-dialog">
-                                        <div class="modal-content">
-                                            <div class="col ticket-wrapper">
-                                                <div class="row1">
-                                                    <img src="~/assets/images/movie/exhuma.jpg" alt="">
-                                                    <p>Exhuma: Quật mộ trùng ma</p>
-                                                </div>
-                                                <div class="row2">
-                                                    <p>Ohayou cenima</p>
-                                                    <p>Suất 20:00 Thứ ba, 09/04/2024</p>
-                                                </div>
-                                                <div class="row3">
-                                                    <p class="p">Ghế</p>
-                                                    <p>D5, D6</p>
-                                                </div>
-                                                <div class="row4">
-                                                    <div class="col">
-                                                        <p class="p">Mã vé</p>
-                                                        <p>WJHC3B5</p>
-                                                    </div>
-                                                    <div class="col">
-                                                        <p class="p">Giá</p>
-                                                        <p>100.000đ</p>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>*@
                         </div>
                         <div class="tab-pane py-3" id="profile-infor" role="tabpanel">
                             <div class="row bg-white infor-detail">
@@ -498,6 +423,7 @@
                 </div>
             </div>
         </div>
+    </div>
         <script src="~/Areas/User/assets/js/bootstrap.bundle.min.js"></script>
         <script src="~/Areas/User/assets/js/profilescript.js"></script>
 </body>
