--- a/FE_Q/assets/css/moviedetailstyle.css
+++ b/FE_Q/assets/css/moviedetailstyle.css
@@ -277,6 +277,7 @@
 .mv-img
 {
     padding-left: 400px;
+    z-index: -1;
     
 }
 
@@ -291,6 +292,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 2rem;
+    z-index: 2;
 }
 
 .play-img{
