--- a/FE_Q/assets/css/directordetailstyle.css
+++ b/FE_Q/assets/css/directordetailstyle.css
@@ -210,135 +210,13 @@
     color: #F26B38;
 }
 /*content*/
-.text{
-    font-size: 1rem;
-    font-weight: 700;
-    display: inline-block;
-    border-left :solid;
-    --tw-border-opacity: 1;
-    border-color: rgb(3 78 162 / var(--tw-border-opacity));
-    border-width: 5px;
-    padding-left: 5px;
-    margin-bottom: 25px;
-}
-.option{
-    border-bottom: 2px solid #034ea2;
-}
 
-.btn-option{
-    background-color: #fff;
-    font-size: .875rem;
-    font-weight: 400;
-    border: 1px solid #e5e7eb;
-    border-radius: .25rem;
-    width: 150px;
-    height: 40px;
-    color: #4a4a4a;
-   
-}
-.btn-option:hover{
-    --tw-border-opacity: 1;
-    border-color: rgb(3 78 162 / var(--tw-border-opacity));
-}
-.dropdown-item {
-    font-size: .875rem;
-    font-weight: 400;
-    color: inherit;
-    font-family: Nunito Sans, sans-serif ;
-}
-.dropdown-item:hover{
-    background-color: #c6e7ff;
-}
-
-.active{
-    box-shadow: #c6e7ff;
-    --tw-border-opacity: 1;
-    border-color: rgb(3 78 162 / var(--tw-border-opacity));
-    background-color: #fff;
-    font-size: .875rem;
-    font-weight: 400;
-    border-radius: .25rem;
-    width: 150px;
-    height: 40px;
-    color: #4a4a4a;
-}
-.line-default {
-    border-bottom: 6px solid #f4f4f4;
-   
-}
 .wrapper{
-    padding-top: 28px;
-}
-.item{
-    padding-bottom: 20px;
-    font-family: Nunito Sans, sans-serif;
-}
-.movie-list{
-    margin-top: 32px;
-}
-.post-list{
-    list-style: none;
-    margin-top: 2rem;
+    padding-top: 4rem;
+    margin-left: 8rem;
+    margin-right: 8rem;
     padding-left: 0;
-    margin-bottom: 4rem;
-}
-.poster
-{
-    width: 100%;
-    box-sizing: border-box;
-    border: 0 solid #e5e7eb;
-    border-radius: 5px;
-}
-
-.img-link{
-    display: inline-block;
-}
-.like-btn{
-    padding: 0; 
-    width: 75px; 
-    height: 24px;
-    background-color:#4d88ff; 
-    font-size: .625rem;
-    border-radius: .25rem;
-    border: 1px solid #4080ff;  
-    color: white;
-}
-.like-btn:hover{
-    cursor: pointer;
-    background-color: #034ea2;
-}
-.view-btn{
-    font-size: .625rem;
-    border-radius: .25rem;
-    text-transform: none;
-    font-weight: inherit;
-    color: inherit;
-    width: 90px;
-    height: 24px;
-    border: 1px solid rgb(233 237 241);
-}
-.actorname{
-    font-style: normal;
-    text-decoration: none;
-    --tw-text-opacity: 1;
-    color: rgb(51 51 51 / var(--tw-text-opacity));
-    font-weight: 500;
-    font-size: 1.125rem;
-    line-height: 1.75rem;
-
-}
-.des-text{
-    font-size: small;
-    font-weight: 400;
-    font-family: Nunito Sans, sans-serif;
-    color: #4a4a4a;
-}
-
-.description{
-    margin-top: 10px;
-}
-.movie{
-    margin-bottom: 10px;
+    padding-right: 0;
 }
 
 /*right*/
@@ -349,7 +227,7 @@
     border-left :solid;
     --tw-border-opacity: 1;
     border-color: rgb(3 78 162 / var(--tw-border-opacity));
-    border-width: 5px;
+    border-width: .25rem;
     padding-left: 5px;
     margin-bottom: 25px;
     margin-top: 25px;
@@ -421,13 +299,150 @@
 .right .bonus .new-mv:hover a{
     color: #fff;
 }
-.galaxy p{
+.line-default {
+    border-bottom: 6px solid #f4f4f4;
+   
+}
+/*left*/
+
+.poster img{
+   width: 16rem;
+   height: 24rem;
+   border-radius: 5px;
+}
+.option a{
+    --tw-text-opacity: 1;
+    color: rgb(119 119 119 / var(--tw-text-opacity));
+    text-decoration: none;
+    font-size: .875rem;
+    font-weight: 400;
+    font-family: Nunito Sans, sans-serif ;
+}
+
+.option a:hover{
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+.ot-item{
+    list-style: none;
+    display: inline-block;
+}
+.option .name{
+    list-style: none;
+    display: inline-block;
+    --tw-text-opacity: 1;
+    color: rgb(119 119 119 / var(--tw-text-opacity));
+    text-decoration: none;
+    font-size: .875rem;
+    font-weight: 400;
+    font-family: Nunito Sans, sans-serif ;
+    color: #4a4a4a;
+}
+.infor{
+    padding-left: 0;
+}
+.option{
+    padding-left: 10px;
+
+}
+
+.like-btn{
+    padding: 0; 
+    width: 75px; 
+    height: 24px;
+    background-color:#4d88ff; 
+    font-size: .625rem;
+    border-radius: .25rem;
+    border: 1px solid #4080ff;  
+    color: white;
+    margin-right: 10px;
+}
+.like-btn:hover{
+    cursor: pointer;
+    background-color: #034ea2;
+}
+.view-btn{
+    font-size: .625rem;
+    border-radius: .25rem;
+    text-transform: none;
+    font-weight: inherit;
+    color: inherit;
+    width: 90px;
+    height: 24px;
+    border: 1px solid rgb(233 237 241);
+}
+.review{
     font-size: small;
+    font-family: Nunito Sans, sans-serif;
+    font-weight: 500;
+    font-style: italic;
+}
+.director-rating{
+    padding-bottom: 2rem;
+    padding-left: 10px;
+}
+.director-name{
+    
+    font-weight: 600;
+    font-size: 1.75rem;
+    padding-bottom: 2rem;
+    padding-left: 10px;
+}
+.review p{
+    padding-left: 0;
+    margin-bottom: 2rem;
+    padding-left: 10px;
+}
+.d{
+    font-size: .875rem;
+    font-weight: 400;
+    --tw-text-opacity: 1;
+    color: rgb(119 119 119 / var(--tw-text-opacity));
+    margin-right: 0;
+    padding-top: 0px;
+    font-family: Nunito Sans, sans-serif;
+    padding-left: 10px;
+}
+.nation p{
+    --tw-text-opacity: 1;
+    color: rgb(51 51 51 / var(--tw-text-opacity));
+    font-weight: 500;
+    font-size: .875rem;
+   
+}
+.img img{
+    width: 12.5rem;
+    height: 9rem;
+    border-radius: .25rem;
+
+}
+.mv-poster img{
+    width: 8rem;
+    height: 5rem;
+    border-radius: .25rem;
+}
+.mv-name a{
+    text-decoration: none;
+    font-size: .875rem;
+    font-weight: 500;
+    color: #000;
+}
+.status{
+    font-size: .875rem;
+    font-weight: 600;
+    color: #000;
+}
+.mv-name p{
+    margin-bottom: .5rem;
+}
+.item{
+    margin-bottom: 1rem;
+}
+.story p{
+    font-size: 14px;
     font-weight: 400;
     font-family: Nunito Sans, sans-serif;
     color: #4a4a4a;
-}
-.galaxy{
-    margin-top: 3rem;
-    margin-bottom: 10rem;
+    
 }
